--- a/DAIFEN/src/form/bilan.form
+++ b/DAIFEN/src/form/bilan.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="BilanPanel">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="panelClass.BilanPanel">
   <grid id="713cf" binding="bilanPanel" row-count="5" column-count="3" hgap="-1" vgap="-1">
     <margin top="5" left="5" bottom="5" right="5"/>
     <constraints>
