--- a/DAIFEN/src/form/ordres.form
+++ b/DAIFEN/src/form/ordres.form
@@ -6,7 +6,10 @@
       <xy x="141" y="72" width="419" height="472"/>
       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3"/>
     </constraints>
-    <properties/>
+    <properties>
+      <autoscrolls value="true"/>
+      <opaque value="true"/>
+    </properties>
     <border type="none"/>
     <children>
       <xy id="4d511" hgap="-1" vgap="-1">
@@ -22,7 +25,7 @@
       <grid id="90251" row-count="2" column-count="4" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <xy x="0" y="79" width="419" height="77"/>
+          <xy x="11" y="79" width="396" height="77"/>
           <grid row="1" column="0" row-span="1" col-span="7" vsize-policy="3" hsize-policy="3" anchor="0" fill="3"/>
         </constraints>
         <properties/>
@@ -39,7 +42,7 @@
           </component>
           <component id="9e0be" class="javax.swing.JLabel">
             <constraints>
-              <xy x="221" y="22" width="141" height="17"/>
+              <xy x="198" y="22" width="141" height="17"/>
               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0"/>
             </constraints>
             <properties>
@@ -55,7 +58,7 @@
           </component>
           <component id="63dd7" class="javax.swing.JLabel">
             <constraints>
-              <xy x="288" y="50" width="74" height="17"/>
+              <xy x="265" y="50" width="74" height="17"/>
               <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0"/>
             </constraints>
             <properties>
@@ -64,7 +67,7 @@
           </component>
           <component id="cda09" class="javax.swing.JLabel" binding="currentKnowledge">
             <constraints>
-              <xy x="372" y="22" width="42" height="17"/>
+              <xy x="349" y="22" width="42" height="17"/>
               <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0"/>
             </constraints>
             <properties>
@@ -73,7 +76,7 @@
           </component>
           <component id="3b77" class="javax.swing.JLabel" binding="knowledgeProgress">
             <constraints>
-              <xy x="372" y="50" width="17" height="17"/>
+              <xy x="349" y="50" width="17" height="17"/>
               <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0"/>
             </constraints>
             <properties>
@@ -82,7 +85,7 @@
           </component>
           <hspacer id="ec3ee">
             <constraints>
-              <xy x="178" y="25" width="43" height="11"/>
+              <xy x="178" y="25" width="20" height="11"/>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1"/>
             </constraints>
           </hspacer>
