--- a/DAIFEN/src/form/bilan.form
+++ b/DAIFEN/src/form/bilan.form
@@ -11,40 +11,14 @@
     </properties>
     <border type="etched"/>
     <children>
-      <grid id="fc75f" binding="cadreBatiments" row-count="1" column-count="1" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
-        <constraints>
-          <xy x="7" y="83" width="432" height="46"/>
-          <grid row="1" column="0" row-span="1" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="3"/>
-        </constraints>
-        <properties>
-          <autoscrolls value="false"/>
-          <visible value="true"/>
-        </properties>
-        <border type="none" title="Batiments"/>
-        <children>
-          <component id="ed2d1" class="javax.swing.JTable" binding="buildingTable">
-            <constraints>
-              <xy x="5" y="21" width="422" height="20"/>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3"/>
-            </constraints>
-            <properties>
-              <autoCreateColumnsFromModel value="true"/>
-              <autoResizeMode value="0"/>
-              <columnSelectionAllowed value="true"/>
-              <focusable value="false"/>
-            </properties>
-          </component>
-        </children>
-      </grid>
       <grid id="443da" binding="cadreTroupes" row-count="1" column-count="1" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <xy x="7" y="134" width="432" height="76"/>
+          <xy x="7" y="197" width="432" height="76"/>
           <grid row="2" column="0" row-span="1" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="3"/>
         </constraints>
         <properties>
-          <visible value="false"/>
+          <visible value="true"/>
         </properties>
         <border type="none" title="Troupes"/>
         <children>
@@ -64,11 +38,11 @@
       <grid id="a000b" binding="cadreRoyaumesConnus" row-count="1" column-count="1" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <xy x="7" y="215" width="432" height="76"/>
+          <xy x="7" y="278" width="432" height="76"/>
           <grid row="3" column="0" row-span="1" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="3"/>
         </constraints>
         <properties>
-          <visible value="false"/>
+          <visible value="true"/>
         </properties>
         <border type="none" title="Royaumes connus"/>
         <children>
@@ -163,9 +137,28 @@
           <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1"/>
         </constraints>
       </hspacer>
-      <vspacer id="d808d">
+      <scrollpane id="5f2f7" binding="cadreBatiments">
         <constraints>
-          <xy x="45" y="230" width="11" height="202"/>
+          <xy x="7" y="83" width="432" height="109"/>
+          <grid row="1" column="0" row-span="1" col-span="3" vsize-policy="7" hsize-policy="7" anchor="0" fill="3"/>
+        </constraints>
+        <properties>
+          <horizontalScrollBarPolicy value="31"/>
+          <verticalScrollBarPolicy value="21"/>
+        </properties>
+        <border type="none" title="Batiments"/>
+        <children>
+          <component id="d8931" class="javax.swing.JTable" binding="buildingTable">
+            <constraints/>
+            <properties>
+              <preferredScrollableViewportSize width="-1" height="-1"/>
+            </properties>
+          </component>
+        </children>
+      </scrollpane>
+      <vspacer id="5a902">
+        <constraints>
+          <xy x="45" y="354" width="11" height="78"/>
           <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2"/>
         </constraints>
       </vspacer>
